; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_hostap.c_hostap_set_ieee8021x.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_hostap.c_hostap_set_ieee8021x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_bss_params = type { i32 }
%struct.hostap_driver_data = type { i32 }

@PRISM2_PARAM_IEEE_802_1X = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"Could not setup IEEE 802.1X support in kernel driver.\0A\00", align 1
@PRISM2_PARAM_HOST_DECRYPT = common dso_local global i32 0, align 4
@PRISM2_PARAM_HOST_ENCRYPT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [57 x i8] c"Could not setup host-based encryption in kernel driver.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.wpa_bss_params*)* @hostap_set_ieee8021x to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hostap_set_ieee8021x(i8* %0, %struct.wpa_bss_params* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wpa_bss_params*, align 8
  %6 = alloca %struct.hostap_driver_data*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.wpa_bss_params* %1, %struct.wpa_bss_params** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.hostap_driver_data*
  store %struct.hostap_driver_data* %9, %struct.hostap_driver_data** %6, align 8
  %10 = load %struct.wpa_bss_params*, %struct.wpa_bss_params** %5, align 8
  %11 = getelementptr inbounds %struct.wpa_bss_params, %struct.wpa_bss_params* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %7, align 4
  %13 = load %struct.hostap_driver_data*, %struct.hostap_driver_data** %6, align 8
  %14 = load i32, i32* @PRISM2_PARAM_IEEE_802_1X, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i64 @hostap_ioctl_prism2param(%struct.hostap_driver_data* %13, i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = call i32 @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %37

20:                                               ; preds = %2
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %37

24:                                               ; preds = %20
  %25 = load %struct.hostap_driver_data*, %struct.hostap_driver_data** %6, align 8
  %26 = load i32, i32* @PRISM2_PARAM_HOST_DECRYPT, align 4
  %27 = call i64 @hostap_ioctl_prism2param(%struct.hostap_driver_data* %25, i32 %26, i32 1)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %34, label %29

29:                                               ; preds = %24
  %30 = load %struct.hostap_driver_data*, %struct.hostap_driver_data** %6, align 8
  %31 = load i32, i32* @PRISM2_PARAM_HOST_ENCRYPT, align 4
  %32 = call i64 @hostap_ioctl_prism2param(%struct.hostap_driver_data* %30, i32 %31, i32 1)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %29, %24
  %35 = call i32 @printf(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %37

36:                                               ; preds = %29
  store i32 0, i32* %3, align 4
  br label %37

37:                                               ; preds = %36, %34, %23, %18
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i64 @hostap_ioctl_prism2param(%struct.hostap_driver_data*, i32, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
